syntax = "proto3";

option go_package = "/dbservice";

package dbservice;

service UserServ{
  rpc CreateUser(CreateUserRequest) returns (CreateUserReply){}
  rpc GetUser(GetUserRequest) returns (GetUserReply){}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserReply){}
  rpc GetUsers(GetUsersRequest) returns (GetUsersReply){}
}

service OrderServ{
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderReply){}
  rpc GetOrderById(GetOrderByIdRequest) returns(GetOrderByIdReply){}
  rpc GetOrderByUId(GetOrderByUIdRequest) returns(GetOrderByUIdReply){}
  rpc GetOrderByPId(GetOrderByPIdRequest) returns(GetOrderByPIdReply){}
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderReply) {}
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersReply) {}
  rpc ClearOrders(ClearOrdersRequest) returns (ClearOrdersReply) {}
}

service ProductServ{
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply){}
  rpc GetProduct(GetProductRequest) returns (GetProductReply){}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductReply){}
  rpc GetProducts(GetProductsRequest) returns (GetProductsReply){}
  rpc SetStock(SetStockRequest) returns (SetStockReply){}
  rpc GetStock(GetStockRequest) returns (GetStockReply){}
}

service PermServ{
  rpc GetRoles(GetRolesRequest) returns (GetRolesReply){}
  rpc GetPerm(GetPermRequest) returns (GetPermReply){}
  rpc GetPerms(GetPermsRequest) returns (GetPermsReply){}
  rpc AddRole (AddRoleRequest) returns (AddRoleReply){}
  rpc AddPerm (AddPermRequest) returns (AddPermReply){}
  rpc SetRole (SetRoleRequest) returns (SetRoleReply){}
}

message User{
  uint32 id = 1;
  string name = 2;
  string password = 3;
  int32 sex = 4;
  string phone = 5;
  string created = 6;
}

message Order{
  uint32 id = 1;
  uint32 userId = 2;
  uint32 productId = 3;
  int32 num = 4;
  float price = 5;
  string created = 6;
}

message Product{
  uint32 id = 1;
  string name = 2;
  float price = 3;
  string description = 4;
  int32 stock = 5;
  string created = 6;
  int32 version = 7;
}

message Role{
  uint32 id = 1;
  string name = 2;
}

message Perm{
  uint32 id = 1;
  string path = 2;
}

message CreateUserRequest{
  User user = 1;
}

message CreateUserReply{
  bool ok = 1;
  string error = 2;
}

message GetUserRequest{
  string name = 1;
}

message GetUserReply{
  User user = 1;
  bool ok = 2;
  string error = 3;
}

message DeleteUserRequest{
  string name = 1;
}

message DeleteUserReply{
  bool ok = 1;
  string error = 2;
}

message GetUsersRequest{

}

message GetUsersReply{
  repeated User users = 1;
  bool ok = 2;
  string  error = 3;
}

message CreateOrderRequest{
  string method = 1;
  Order order = 2;
}

message CreateOrderReply{
  bool ok = 1;
  string error = 2;
}

message GetOrderByIdRequest{
  uint32 id = 1;
}

message GetOrderByIdReply{
  Order order = 1;
  bool ok = 2;
  string error = 3;
}

message GetOrderByUIdRequest{
  uint32 uid = 1;
}

message GetOrderByUIdReply{
  repeated Order orders = 1;
  bool ok = 2;
  string error = 3;
}

message GetOrderByPIdRequest{
  uint32 pid = 1;
}

message GetOrderByPIdReply{
  repeated Order orders = 1;
  bool ok = 2;
  string error = 3;
}

message DeleteOrderRequest{
  uint32 id = 1;
}

message ClearOrdersRequest{

}

message ClearOrdersReply{
  bool ok = 1;
  string error = 2;
}

message DeleteOrderReply{
  bool ok = 1;
  string error = 2;
}

message GetOrdersRequest{

}

message GetOrdersReply{
  repeated Order orders = 1;
  bool ok = 2;
  string error = 3;
}

message CreateProductRequest{
  Product product = 1;
}

message CreateProductReply{
  bool ok = 1;
  string error = 2;
}

message GetProductRequest{
  string name = 1;
}

message GetProductReply{
  Product product = 1;
  bool ok = 2;
  string error = 3;
}

message DeleteProductRequest{
  string name = 1;
}

message DeleteProductReply{
  bool ok = 1;
  string error = 2;
}

message GetProductsRequest{

}

message GetProductsReply{
  repeated Product products = 1;
  bool ok = 2;
  string  error = 3;
}

message SetStockRequest{
  uint32 id = 1;
  int32 num = 2;
}

message SetStockReply{
  bool ok = 1;
  string error = 2;
}

message GetStockRequest{
  uint32 id = 1;
}

message GetStockReply{
  int32 stock = 1;
  bool ok = 2;
  string error = 3;
}

message GetRolesRequest{

}

message GetRolesReply{
  repeated Role roles = 1;
  bool ok = 2;
  string error = 3;
}

message GetPermsRequest{

}

message GetPermsReply{
  repeated Perm perms = 1;
  bool ok = 2;
  string error = 3;
}

message AddRoleRequest{
  Role role = 1;
}

message AddRoleReply{
  bool ok = 1;
  string error = 2;
}

message AddPermRequest{
  Perm perm = 1;
}

message AddPermReply{
  bool ok = 1;
  string error = 2;
}

message GetPermRequest{
  uint32 uid = 1;
}

message GetPermReply{
  string perms = 1;
  bool ok = 2;
  string error = 3;
}

message SetRoleRequest{
  uint32 uid = 1;
  uint32 rid = 2;
}

message SetRoleReply{
  bool ok = 1;
  string error = 2;
}